// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <RecordsOfTablePopoverDiagnosis /> should renders with props correctly 1`] = `
<div
  className="form-group-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Problem issue
        </label>
        <div
          className="form-control-static"
        >
          # CONDYLE RIGHT HUMERUS 123
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Date
        </label>
        <div
          className="form-control-static"
        >
          01-Jan-2018
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      Description
    </label>
    <div
      className="form-control-static"
    >
      ggg
    </div>
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Terminology
        </label>
        <div
          className="form-control-static"
        >
          SNOMED-CT
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Terminology Code
        </label>
        <div
          className="form-control-static"
        >
          12393890
        </div>
      </div>
    </Col>
  </Row>
</div>
`;

exports[`Component <RecordsOfTablePopoverDiagnosis /> should renders with props correctly with empty detail 1`] = `
<div
  className="form-group-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Problem issue
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Date
        </label>
        <div
          className="form-control-static"
        >
          01-Jan-2018
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      Description
    </label>
    <div
      className="form-control-static"
    />
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Terminology
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Terminology Code
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
  </Row>
</div>
`;
